build 113:
	Add new python script to read at least the water temperature for cooler control function.