@@ -2,6 +2,6 @@ package hu.barbar.tasker;
 
 public class StaticData {
 	
-	public static final int BUILD_NUM = 114;
+	public static final int BUILD_NUM = 115;
 	
 }
