@@ -31,6 +31,8 @@ public class OutputConfig {
 
 	public static final boolean DEFAULT_VALUE_OF_REVERSED = false;
 	
+	public static final int PWM_MAX_VALUE = 4096;
+	
 	public static class Type {
 		
 		public static final int UNDEFINED = -1,
